// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Spinner Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25  "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       id="htmlid"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25 dummyClassname "
       lang="nb"
       data-testid="123ID"
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithColorsDarkBackground smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_white_1imbs_19 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25  "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithColorsLightBackground smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_blue_1imbs_16 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25  "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Henter innhold
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithHideText play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25  "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59 _srOnly_1imbs_70 _spinnerTitle_centerText_1imbs_66 ">
      laster data
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25  "
       id="dummyIdForwardedFromRef"
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithSizeAndPosition smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_small_1imbs_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_large_1imbs_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexRow_1imbs_36 _spinner_small_1imbs_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59   ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexRow_1imbs_36 _spinner_medium_1imbs_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59   ">
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexRow_1imbs_36 _spinner_large_1imbs_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59   ">
      henter innhold
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithSizeAndPositionLongText smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_small_1imbs_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_medium_1imbs_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexColumn_1imbs_32 _spinner_large_1imbs_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59  _spinnerTitle_centerText_1imbs_66 ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexRow_1imbs_36 _spinner_small_1imbs_22 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59   ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexRow_1imbs_36 _spinner_medium_1imbs_25 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59   ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_1imbs_5 _spinner_black_1imbs_13 _spinner_flexRow_1imbs_36 _spinner_large_1imbs_28 bottomSpacingXL "
  >
    <div class="_spinnerAnimation_1imbs_40 ">
    </div>
    <span class="_spinnerTitle_1imbs_59   ">
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
</div>
`;
